--- a/basics/templates/basics/map_claim.html
+++ b/basics/templates/basics/map_claim.html
@@ -5,86 +5,68 @@
 <style>
 
 	#map-container {
-		height: 40%;
+		height: 50%;
 	}
 
 
 </style>
 <div class ="row">
-<div class="col-md-9">
-<!-- Modal -->
-
+<div class="col-md-12">
 <div class="standard-modal" id="location-map-modal">
-   		<div class="modal-content">
+<div class="modal-content">
+<div class ="modal-header"><h2 class="text-center">Which area should be claimed?</h2></div>
+<div class="modal-body row">
 
-       		<div class="modal-header">
-       			<h2 class="text-center">Which area should be claimed?</h2>
-      		</div>
-      		<form class= "form" role="form" method="POST" id="post-form">
-      		{%csrf_token%}
-       		<div class="modal-body">
-                <!-- <div class="form-group" id="add-location-alert" style="visibility: hidden;">
-					<p id="option"><b>1. Option: </b>The easiest way to get your location is to use the autolocation function.<button id="standard-grey-button-bold" type="button" class="btn btn-primary" style="margin-left: 15px; margin-right: 15px" onclick="getLocation()">Get my Location</button></p>
-				</div> -->
+<div class="col-md-9">
+
 				<div class="form-group" id="location-form">
-					<p id="option"><b>1. Step(optional): </b>The easiest way to get your location is to use the autolocation function.<button id="standard-grey-button-bold" type="button" class="btn btn-primary" style="margin-left: 15px; margin-right: 15px" onclick="getLocation()">Get my Location</button></p>
+					<p id="option"><b>1. Step(optional): </b>The easiest way to get your location is to use the autolocation function.<button id="standard-grey-button-bold" type="button" class="btn btn-primary" style="margin-left: 15px; margin-right: 15px" onclick="getLocation()">My Location</button></p>
 				</div>
 				<div class="form-group" id="location-form">
 					<p id="option"><b>2. Step: </b>Draw your polygon.</p>
 					<div id="map-container"></div>
 				</div>
 
-			</div><!-- modal-body -->
-
-	        <div class="modal-footer">
-				<button id="standard-grey-button-bold" type="button" onclick="loadClaims('0')" class="btn btn-primary">Load All</button>
-                <button id="standard-grey-button-bold" type="button" onclick="loadClaims('1')" class="btn btn-primary">Load Own</button>
-                <button id="standard-grey-button-bold" type="button" onclick="newClaim()" class="btn btn-primary" >New</button>
-                <button id="standard-grey-button-bold" type="button" onclick="post_poly()" class="btn btn-primary" >Save</button>
-	        </div>
-	        </form>
-
-      	</div><!-- /.modal-content -->
-</div><!-- /.modal -->
+<div class="row">
+<div class="col-md-12 text-right">
+<button id="standard-grey-button-bold" style="margin:1px" type="button" onclick="loadClaims('0')" class="btn btn-primary">Load All</button>
+<button id="standard-grey-button-bold" style="margin:1px" type="button" onclick="loadClaims('1')" class="btn btn-primary">Load Own</button>
+<button id="standard-grey-button-bold" style="margin:1px" type="button" onclick="newClaim()" class="btn btn-primary" >New</button>
+<button id="standard-grey-button-bold" style="margin:1px" type="button" onclick="post_poly()" class="btn btn-primary" >Save</button>
+</div>
 </div>
 
+</div>
 <div class="col-md-3">
-<!-- Modal -->
-<div class="standard-modal" id="claim-modal">
-   		<div class="modal-content">
+    <h2 class="text-center">Your Claims</h2>
+        <div class="col-md-12" style="max-height: 400px; overflow-y: scroll;">
+                    <div class="list-group" id="poly-list">
+                        {% if polyuser %}
+                            {% for poly in polyuser %}
+                                <!-- list all needs -->
+                                <a class="list-group-item" id="standard-list-group-item-div">
+                                    <div class="row">
+                                            <h4 class="list-group-item-heading">{{ poly.pk }}</h4>
+                                            <p class="list-group-item-text">Owner: {{poly.claimer}}</p>
+                                            <button type="button" class="btn btn-default btn-sml standard-grey-button-light" onclick="deleteClaim({{poly.pk}})" style="float: right; "><span class="glyphicon glyphicon-remove"></span>Delete</button>
 
-       		<div class="modal-header">
-       			<h2 class="text-center">Group Claims</h2>
-      		</div>
-       		<div class="modal-body" style="max-height: 540px; overflow-y: scroll;">
-            <div class="list-group" id="poly-list">
-                {% if polyuser %}
-                    {% for poly in polyuser %}
-                        <!-- list all needs -->
-                        <a class="list-group-item" id="standard-list-group-item-div">
-                            <div class="row">
-                                    <h4 class="list-group-item-heading">{{ poly.pk }}</h4>
-                                    <p class="list-group-item-text">Owner: {{poly.claimer}}</p>
-                                    <button type="button" class="btn btn-default btn-sml standard-grey-button-light" onclick="deleteClaim({{poly.pk}})" style="float: right; "><span class="glyphicon glyphicon-remove"></span>Delete</button>
+                                    </div>
+                                </a>
+                            {% empty %}
+                                <h4>There are no needs.</h4>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
 
-                            </div>
-                        </a>
-                    {% empty %}
-                        <h4>There are no needs.</h4>
-                    {% endfor %}
-                {% endif %}
-            </div>
+        </div>
+</div>
 
-			</div><!-- modal-body -->
-
-	        <div class="modal-footer">
-	        </div>
-	        </form>
-
-      	</div><!-- /.modal-content -->
-</div><!-- /.modal -->
 </div>
 </div>
+</div>
+</div>
+</div>
+
 
 
 
