--- a/basics/templates/basics/profil_edit.html
+++ b/basics/templates/basics/profil_edit.html
@@ -54,8 +54,33 @@
 						<br><br>
 					</div>
 
+					<p><input type = "checkbox" name="changePassword" {% if change == True %} checked {% endif %} onclick=$("#passwordChange").fadeToggle();>
+						<label>Change my Password</label></p>
+
+
+					<div id="passwordChange" {% if change == False %}style="display:none " {% endif %}>
+
+					{% if change == True %}
+					<p> couldn't change password, please try again </p>
+					{% endif %}
+    					<div class="form-group">
+					<input type="password" class="form-control input-lg" placeholder= "old password"  name="oldpw" >
+					</div>
+
 					<div class="form-group">
-						 <a class="btn-sm"href="{% url 'basics:change_password' %}">Change password</a>
+					<input type="password" class="form-control input-lg" placeholder= "new password"  name="newpw1" >
+					</div>
+
+					<div class="form-group">
+					<input type="password" class="form-control input-lg" placeholder= "repeat"  name="newpw2" >
+					</div>
+
+						</div>
+
+					<br>
+
+
+					<div class="form-group">
 						<input id="standard-grey-button-bold" type="submit" onclick="profil_edit" class="btn btn-block btn-lg btn-primary" value="Save"/>
 					</div>
 				</form>
@@ -64,3 +89,5 @@
 	</div>
 
 {% endblock %}
+
+
