--- a/basics/templates/basics/needs_new.html
+++ b/basics/templates/basics/needs_new.html
@@ -1,47 +1,74 @@
 {% extends 'basics/base.html' %}
-
 {% block content %}
-<!-- Introduction Row -->
-	<div id="standard-modal">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h1 class="text-center">create new Need</h1>
-			</div>
-			<div class="modal-body">
-				<form class="form" role="form" method="post" accept-charset="UTF-8">
-					{%csrf_token%}
-					<p style="font-size:160%;"> category </p>
-					<select class="form-control" name="{{need.categorie.name}}">
-						{% for categorie in categories%}
-							<option value="{{categorie.id}}">{{categorie.name}}</option>
-						{% endfor %}
-					</select>
-					<p style="font-size:160%;"> description </p>
-						<div class="form-group">
-							<input type="description" class="form-control input-lg" placeholder="headline" name="{{need.headline.name}}"  rows="4" maxlength="30"></textarea>
-						</div>
-					<div class="form-group">
-						<textarea type="description" class="form-control input-lg" placeholder="description" name="{{need.text.name}}"  rows="4"></textarea>
-					</div>
-					{% if user.groups.all|length != 0 %}
-						<p style="font-size:160%;"> post as </p>
-						<select class="form-control" name="group">
-							<option value="no_group">User</option>
-							{% for group in user.groups.all %}
-								<option value="{{group.id}}">{{group.name}}</option>
-							{% endfor %}
-						</select>
-					{% endif %}
-					<div class="form-group">
-             				<p id="choose-location-text">If you do not like to use your standard location choose an other one.
-      					{% include "basics/map_testing.html" %}</p>
-					</div>
 
-					<div class="form-group">
-						<input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
-					</div>
-				</form>
-			</div>
+<div id="standard-modal">
+	<div class="modal-content">
+		<div class="modal-header">
+            <h2 class="text-center" id="standard-modal-headline">Create new Need<br><small>Use this form to create your need so that other user can help you.</small></h2>
+		</div>
+		<div class="modal-body">
+            <div class="row">
+                <div class="col-sm-10 col-sm-offset-1">
+                    <form class="form" role="form" method="post" accept-charset="UTF-8">
+                        {%csrf_token%}
+                        <h4>Add a headline for your need: <a data-toggle="tooltip" title="geht das so?"><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
+                        <div class="form-group">
+                            <input type="description" class="form-control input-lg" placeholder="Headline" name="{{need.headline.name}}"  rows="4" maxlength="30"></textarea>
+                        </div>
+                        <h4>Choose a category for your need:</h4>
+                        <select style="width: 100%;" name="{{need.categorie.name}}">
+                            {% for categorie in categories%}
+                                <option value="{{categorie.id}}">{{categorie.name}}</option>
+                            {% endfor %}
+                        </select>
+                        <h4>Add a description for your need:</h4>
+                        <div class="form-group">
+                            <textarea type="description" class="form-control input-lg" placeholder="Description" name="{{need.text.name}}"  rows="4"></textarea>
+                        </div>
+                        <h4>If you do not like to use your standard location for this need choose an other one.</h4>
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <div class="form-group">
+                                    {% include "basics/map_testing.html" %}
+                                </div>
+                            </div>
+                        </div>
+                        {% if user.groups.all|length != 0 %}
+                            <div class="row">
+                                <div class="col-sm-5 col-sm-offset-4" style="margin-top: 5px; margin-bottom: 15px;">
+                                    <select style="width: 100%;" name="group">
+                                        <option value="no_group">create for you</option>
+                                        {% for group in user.groups.all %}
+                                            <option value="{{group.id}}">create for {{group.name}}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                                <div class="col-sm-3">
+                                    <div class="form-group">
+                                        <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Create"/>
+                                    </div>
+                                </div>
+                            </div>
+                        {% else %}
+                            <div class="row">
+                                <div class="col-sm-3 col-sm-offset-9">
+                                    <div class="form-group">
+                                        <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Create"/>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
+                    </form>
+                </div>
+            </div>
 		</div>
 	</div>
+</div>
+
+<style>
+    $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+</style>
+
 {% endblock %}
