--- a/basics/templates/basics/map_claim.html
+++ b/basics/templates/basics/map_claim.html
@@ -36,7 +36,7 @@
                         <div class="col-sm-10 col-sm-offset-1" style=" margin-top: 15px; margin-bottom: 15px;">
                             <h4><span style="font-weight: bold">1.</span> Name for your claim:</h4>
                             <div class="form-group">
-              					<input type="text" class="form-control input-lg" placeholder="Name for Claim" name="claimname" maxlength="30" required/>
+              					<input type="text" class="form-control input-lg" placeholder="Name for Claim" id="claimname" name="claimname" maxlength="30" required/>
               				</div>
                             <h4><span style="font-weight: bold">2.</span> Draw your polygon!</h4>
                             <div class="row">
@@ -158,10 +158,11 @@ function refreshClaim(){
 		pathi=save();
         saved=true;
 		console.log("form submitted!");
+        claimnam = document.getElementById("claimname").value;
 		$.ajax({
 			url: "post/",
 			type: "POST",
-			data: {csrfmiddlewaretoken: '{{ csrf_token }}', path: pathi},
+			data: {csrfmiddlewaretoken: '{{ csrf_token }}', path: pathi, claimname: claimnam},
 
 			success: function(json){
                 refreshClaim();
@@ -179,6 +180,7 @@ function refreshClaim(){
 			},
 
 			error: function(xhr, errmsg, err){
+                console.log(xhr+ errmsg+ err);
                 $.notify("Opps! Something went wrong :(",{className: "error", position: "right-bottom"});
 			}
 		});
@@ -233,6 +235,10 @@ function refreshClaim(){
                 draggable: true
             });
         loadClaims('2');
+
+        google.maps.event.addDomListener(claimname, 'change', function(){
+            console.log(document.getElementById("claimname").value);
+        });
         /*google.maps.event.addDomListener(deinemama, 'change', function() {
             if($(this).is(':checked'))
             {
